# sc2_workflows

./: AUTHORS.md  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements_dev.txt
notebooks/: PvZ-DT-Drop  PvZ-DT-Drop2  base_flowchart.ipynb  toto
notebooks/.ipynb_checkpoints/: base_flowchart-checkpoint.ipynb
src/sc2_flowcharts/: __init__.py  __main__.py  formatting.py  graph.py
src/sc2_flowcharts.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/sc2_flowcharts/builds/: PvP_proxy_robo.py  PvT_colossus.py  PvT_sentry_charge.py  PvZ_cheese_counter.py  PvZ_dt_drop.py  PvZ_twelvepool.py  TvZ_standard.py  __init__.py
tests/: __init__.py  test_sc2_flowcharts.py
