[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sc2_flowcharts"
version = "0.1.0"
description = "Quick python script to store and genrate build flowcharts"
readme = "README.rst"
authors = [
  {name = "Louis Groux", email = "louis.cal.groux@example.com"}
]
maintainers = [
  {name = "Louis Groux", email = "louis.cal.groux@example.com"}
]
classifiers = [

]
license = {text = "MIT license"}
dependencies = [
  "graphviz>=0.21",
  "jupyter>=1.1.1",
  "jupyterlab>=4.4.4",
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/Calomnie/sc2_flowcharts/issues"
changelog = "https://github.com/Calomnie/sc2_flowcharts/blob/master/changelog.md"
homepage = "https://github.com/Calomnie/sc2_flowcharts"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]


[project.scripts]
sc2_flowcharts = "sc2_flowcharts.__main__:main"



# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

